--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>The Terrance Territory</title>
+    <title>Isa's Website!</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="The Terrance Territory, Giving you the power to have your site.">
-    <meta name="keywords" content="Alfie Terry, web development">
-    <meta name="author" content="Alfie Terry">
-    <link rel="stylesheet" href="https://alfieterry.co.uk/assets/css/main.css" />
+    <meta name="description" content="Isa Lockhart.">
+    <meta name="keywords" content="Isa Lockhart, Birthday">
+    <meta name="author" content="Isa Lockhart">
+    <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="icon" type="image/x-icon" href="Logo3.ico">
 </head>
 <body class="is-preload">
@@ -21,9 +21,8 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <a href="index.html" class="logo">The <strong>Terrance</strong> Territory</a>
+                    <a href="index.html" class="logo">The <strong>Birthday</strong> girls Website!!!</a>
                     <ul class="icons">
-                        <li><a href="https://github.com/AlfieTerryyy/" class="icon brands fa-github"><span class="label">Github</span></a></li>
                     </ul>
                 </header>
 
@@ -32,119 +31,41 @@
                     <div class="content">
                         <header>
                             <h1>Hi, Welcome to<br />
-                            The Terrance Territory</h1>
-                            <p>A One Stop Place For All My Work</p>
+                            Isa's website!!!</h1>
+                            <p>A One Place For saying thankyou for being my aunty</p>
                         </header>
-                        <p>I made This site when I was bored and hope to do more than just be boring</p>
+                        <p>I made This site just for your birthday</p>
                         <ul class="actions">
                             <li><a href="about" class="button big">Learn More</a></li>
                         </ul>
                     </div>
                     <span class="image object">
-                        <img src="https://alfieterry.co.uk/images/homeexample.png" alt="example img" />
+                        <img src="/images/birthday.png" alt="img" />
                     </span>
                 </section>
 
                 <!-- Section: What Can I Do for You -->
                 <section>
                     <header class="major">
-                        <h2>What Can I Do for <strong>You</strong></h2>
+                        <h2>happy birthday to <strong>You</strong></h2>
                     </header>
                     <div class="features">
                         <article>
                             <span class="icon fa-gem"></span>
                             <div class="content">
-                                <h3>Polish</h3>
-                                <p>I can take your current site and give it a pickup.</p>
-                            </div>
-                        </article>
-                        <article>
-                            <span class="icon solid fa-paper-plane"></span>
-                            <div class="content">
-                                <h3>Fast</h3>
-                                <p>I can complete your order <strong>fast</strong> within around a month or two.</p>
+                                <h3>your hart</h3>
+                                <p>no matter what situation you always make people happy (unless you threw a shoe at them).</p>
                             </div>
                         </article>
                         <article>
                             <span class="icon solid fa-rocket"></span>
                             <div class="content">
-                                <h3>Setup</h3>
-                                <p>I can help set up your website and get it running.</p>
-                            </div>
-                        </article>
-                        <article>
-                            <span class="icon solid fa-signal"></span>
-                            <div class="content">
-                                <h3>Users</h3>
-                                <p>With me helping edit your website I can also help upgrade the number of views you get.</p>
+                                <h3>like the stars</h3>
+                                <p>No matter what your always As bright as the <bold>stars</bold>.</p>
                             </div>
                         </article>
                     </div>
                 </section>
-
-                <!-- Projects -->
-                <section>
-                    <header class="major">
-                        <h2>Projects</h2>
-                    </header>
-                    <div class="posts">
-                        <article>
-                            <a href="pages" class="image"><img src="images/freewebexample.png" alt="" /></a>
-                            <h3>Free Website?!?!</h3>
-                            <p>yes thats right im currently working on creating 4 websites that are balank and empty for <bold>You</bold> to edit.</p>
-                            <ul class="actions">
-                                <li><a href="pages" class="button">More</a></li>
-                            </ul>
-                        </article>
-                        <article>
-                            <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-                            <h3></h3>
-                            <p></p>
-                            <ul class="actions">
-                             <!--   <li><a href="#" class="button">More</a></li> -->
-                            </ul>
-                        </article>
-                                     <article>
-                            <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-                            <h3></h3>
-                            <p></p>
-                            <ul class="actions">
-                             <!--   <li><a href="#" class="button">More</a></li> -->
-                            </ul>
-                        </article>
-                        </article>
-                                    <article>
-                            <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-                            <h3></h3>
-                            <p></p>
-                            <ul class="actions">
-                             <!--   <li><a href="#" class="button">More</a></li> -->
-                            </ul>
-                        </article>
-                                     <article>
-                            <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-                            <h3></h3>
-                            <p></p>
-                            <ul class="actions">
-                             <!--   <li><a href="#" class="button">More</a></li> -->
-                            </ul>
-                        </article>
-                            </ul>
-                        </article>
-                                     <article>
-                            <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-                            <h3></h3>
-                            <p></p>
-                            <ul class="actions">
-                             <!--   <li><a href="#" class="button">More</a></li> -->
-                            </ul>
-                        </article>
-                    </div>
-                </section>
-
-            </div>
-        </div>
-
         <!-- Sidebar -->
         <div id="sidebar">
             <div class="inner">
@@ -194,7 +115,8 @@
 
                 <!-- Footer -->
                 <footer id="footer">
-                    <p class="copyright">&copy; Alfie Terry. All rights reserved.</p>
+                    <p class="copyright">&copy; Isa Lockhart. All rights reserved.</p>
+                    <p class="copyright">&copy; Desighned By Alfie Terry.</p>
                 </footer>
 
             </div>
@@ -203,11 +125,11 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://alfieterry.co.uk/assets/js/jquery.min.js"></script>
-    <script src="https://alfieterry.co.uk/assets/js/browser.min.js"></script>
-    <script src="https://alfieterry.co.uk/assets/js/breakpoints.min.js"></script>
-    <script src="https://alfieterry.co.uk/assets/js/util.js"></script>
-    <script src="https://alfieterry.co.uk/assets/js/main.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 </html>
