--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <header id="header">
                     <a href="index.html" class="logo">The <strong>Birthday</strong> girls Website!!!</a>
                     <ul class="icons">
+										<li><a href="https://www.instagram.com/isa.lockhart/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                     </ul>
                 </header>
 
@@ -84,16 +85,7 @@
                     </header>
                     <ul>
                         <li><a href="https://alfieterry.co.uk/index.html">Homepage</a></li>
-                        <li><a href="https://alfieterry.co.uk/order.html">Order</a></li>
-                        <li>
-                            <span class="opener">About</span>
-                            <ul>
-                                <li><a href="https://alfieterry.co.uk/about">About</a></li>
-                                <li><a href="https://alfieterry.co.uk/about/web">About My Website</a></li>
-                                <li><a href="https://alfieterry.co.uk/about/me">About Me</a></li>
-                                <li><a href="https://alfieterry.co.uk/about/skills">About My Skills</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="about">About</a></li>
                     </ul>
                 </nav>
 
@@ -101,7 +93,7 @@
                 <section>
                     <header class="major">
                         <h2>Get in touch</h2>
-                        <h4>Please Use my emails Below</h4>
+                        <h4>Please Use my emails Below for updating this website!</h4>
                     </header>
                     <ul class="contact">
                         <li class="icon solid fa-envelope">
