--- a/about.html
+++ b/about.html
@@ -1,106 +1,103 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>The Terrance Territory</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="The Terrance Territor, Giving you the power to have your site.">
-		<meta name="keywords" content="Alfie Terry, web development">
-                <meta name="author" content="Alfie Terry">
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/x-icon" href="Logo3.ico">
-	</head>
-	<body class="is-preload">
+<head>
+    <title>Isa's Website!</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="description" content="Isa Lockhart.">
+    <meta name="keywords" content="Isa Lockhart, Birthday">
+    <meta name="author" content="Isa Lockhart">
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="icon" type="image/x-icon" href="Logo3.ico">
+</head>
+<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<!-- Wrapper -->
+    <div id="wrapper">
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
+        <!-- Main -->
+        <div id="main">
+            <div class="inner">
 
-							<!-- Header -->
-								<header id="header">
-									<a href="index.html" class="logo">The <strong>Terrance</strong> Territory</a>
-									<ul class="icons">
-                                                                           <li><a href="https://github.com/AlfieTerryyy/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									</ul>
-								</header>
+                <!-- Header -->
+                <header id="header">
+                    <a href="index.html" class="logo">The <strong>Birthday</strong> girls Website!!!</a>
+                    <ul class="icons">
+										<li><a href="https://www.instagram.com/isa.lockhart/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                    </ul>
+                </header>
 
-							<!-- Content -->
-								<section>
+                <!-- Banner -->
+                <section id="banner">
+                    <div class="content">
+                        <header>
+                            <h1>Hi, Welcome to<br />
+                            Isa's website!!!</h1>
+                            <p>A One Place For saying thankyou for being my aunty</p>
+                        </header>
+                        <p>I made This site just for your birthday</p>
+                        <ul class="actions">
+                            <li><a href="about" class="button big">Learn More</a></li>
+                        </ul>
+                    </div>
+                    <span class="image object">
+                        <img src="/images/birthday.png" alt="img" />
+                    </span>
+                </section>
 
-                                                                              <h1>About</h1>
-                                                                              <p>This website was a small project that my friend recomended me trying and all of a sudden i ended up making this!!!</p>
-                                                                              <p>| I WILL ADD MORE |</p>
+                <section>
+<h1>I made this site because your the perfect aunty.</h1>
+<p>and your 19 who dosnt want a website at 19.</p>
+<p>any way, Happy birthday to you</p>
+<p>Happy birthday to you</p>	
+<p>Happy birthday to isa</p>	
+<p>Happy birthday to you</p>	
+		</section>
 
-									
-	
-                                                               </section>
+                <!-- Menu -->
+                <nav id="menu">
+                    <header class="major">
+                        <h2>Navigation</h2>
+                    </header>
+                    <ul>
+                        <li><a href="https://alfieterry.co.uk/index.html">Homepage</a></li>
+                        <li><a href="about">About</a></li>
+                    </ul>
+                </nav>
 
-						</div>
-					</div>
+                <!-- Get in Touch -->
+                <section>
+                    <header class="major">
+                        <h2>Get in touch</h2>
+                        <h4>Please Use my emails Below for updating this website!</h4>
+                    </header>
+                    <ul class="contact">
+                        <li class="icon solid fa-envelope">
+                            <h4>alfie.terry1@outlook.com</h4>
+                        </li>
+                        <li class="icon solid fa-envelope">
+                            <h4>talfie7243@gmail.com</h4>
+                        </li>
+                    </ul>
+                </section>
 
-				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
+                <!-- Footer -->
+                <footer id="footer">
+                    <p class="copyright">&copy; Isa Lockhart. All rights reserved.</p>
+                    <p class="copyright">&copy; Desighned By Alfie Terry.</p>
+                </footer>
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
+            </div>
+        </div>
 
-							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Navigation</h2>
-									</header>
-									<ul>
-										<li><a href="https://alfieterry.co.uk/index.html">Homepage</a></li>
-										<li><a href="https://alfieterry.co.uk/order.html">order</a></li>
-										<li>
-											<span class="opener">About</span>
-											<ul>
-												<li><a href="https://alfieterry.co.uk/about">about</a></li>
-												<li><a href="https://alfieterry.co.uk/about/web">about My Website</a></li>
-												<li><a href="https://alfieterry.co.uk/about/me">about Me</a></li>
-												<li><a href="https://alfieterry.co.uk/about/skills">about My Skills</a></li>
-								</nav>
+    </div>
 
-								
-								<section>
-									<header class="major">
-										<h2>Get in touch</h2>
-										<p>Please Use my email Linked Below</p>
-									</header>
-									<ul class="contact">
-                 <li class="icon solid fa-envelope">
-                  <a href="mailto:alfie.terry1@outlook.com">alfie.terry1@outlook.com</a>
-                 </li>
-                 <li class="icon solid fa-envelope">
-                  <a href="mailto:talfie7243@gmail.com">talfie7243@gmail.com</a>
-                </li>
-									</ul>
-								</section>
+    <!-- Scripts -->
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Alfie Terry. All rights reserved.</p>
-								</footer>
-
-						</div>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="https://alfieterry.co.uk/assets/js/jquery.min.js"></script>
-			<script src="https://alfieterry.co.uk/assets/js/browser.min.js"></script>
-			<script src="https://alfieterry.co.uk/assets/js/breakpoints.min.js"></script>
-			<script src="https://alfieterry.co.uk/assets/js/util.js"></script>
-			<script src="https://alfieterry.co.uk/assets/js/main.js"></script>
-
-	</body>
+</body>
 </html>
