--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <!-- Footer -->
                 <footer id="footer">
                     <p class="copyright">&copy; Isa Lockhart. All rights reserved.</p>
-                    <p class="copyright">&copy; Desighned By Alfie Terry.</p>
+                    <p> Desighned By Alfie Terry.</p>
                 </footer>
 
             </div>
