--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 
                 <!-- Footer -->
                 <footer id="footer">
-                    <p class="copyright">&copy; Isa Lockhart. All rights reserved.</p>
-                    <p> Desighned By Alfie Terry.</p>
+                    <p class="copyright">&copy; Isa Lockhart. All rights reserved,  Desighned By Alfie Terry.</p>
                 </footer>
 
             </div>
