--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </ul>
                     </div>
                     <span class="image object">
-                        <img src="/images/birthday.png" alt="img" />
+                        <img src="/images/Screenshot 2024-08-11 at 15-46-58 Isa 🤍 on Instagram 🎀🎀.png" alt="img" />
                     </span>
                 </section>
 
