--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <a href="index.html" class="logo">The <strong>Birthday</strong> girls Website!!!</a>
+                    <a href="index.html" class="logo"><strong>Isa's</strong> Website!!!</a>
                     <ul class="icons">
 										<li><a href="https://www.instagram.com/isa.lockhart/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                     </ul>
