--- a/index.html
+++ b/index.html
@@ -71,6 +71,23 @@
                     </div>
                 </section>
 
+   <!-- Audio Player -->
+                <section>
+                    <header class="major">
+                        <h2>Enjoy the Birthday Song!</h2>
+                    </header>
+                    <audio controls autoplay>
+                        <source src="path/to/happy-birthday.mp3" type="audio/mp3">
+                        Your browser does not support the audio element.
+                    </audio>
+                </section>
+
+
+
+
+
+
+                
                 <!-- Footer -->
                 <footer id="footer">
                     <p class="copyright">&copy; Isa Lockhart. All rights reserved,  Desighned By Alfie Terry.</p>
