--- a/about.html
+++ b/about.html
@@ -56,6 +56,27 @@
 <p>Happy birthday to you</p>	
 		</section>
 
+
+
+
+   <!-- Audio Player -->
+                <section>
+                    <header class="major">
+                        <h2>Enjoy the Birthday Song!</h2>
+                    </header>
+                    <audio controls autoplay>
+                        <source src="happy-birthday.mp3" type="audio/mp3">
+                        Your browser does not support the audio element.
+                    </audio>
+                </section>
+
+
+
+
+
+
+
+		    
                 <!-- Footer -->
                 <footer id="footer">
                     <p class="copyright">&copy; Isa Lockhart. All rights reserved.</p>
