--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </ul>
                     </div>
                     <span class="image object">
-                        <img src="/images/Screenshot 2024-08-11 at 15-46-58 Isa 🤍 on Instagram 🎀🎀.png" alt="img" />
+                        <img src="images/isa.png" alt="img" />
                     </span>
                 </section>
 
