--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2>Enjoy the Birthday Song!</h2>
     </header>
     <audio controls autoplay>
-        <source src="happy-birthday.mp3" type="audio/mp3">
+        <source src="happy-birthday-155461.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 </section>
