--- a/about.html
+++ b/about.html
@@ -58,18 +58,15 @@
 
 
 
-
-   <!-- Audio Player -->
-                <section>
-                    <header class="major">
-                        <h2>Enjoy the Birthday Song!</h2>
-                    </header>
-                    <audio controls autoplay>
-                        <source src="happy-birthday.mp3" type="audio/mp3">
-                        Your browser does not support the audio element.
-                    </audio>
-                </section>
-
+<section>
+    <header class="major">
+        <h2>Enjoy the Birthday Song!</h2>
+    </header>
+    <audio controls autoplay>
+        <source src="happy-birthday-155461.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+</section>
 
 
 
