--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
                         <li><a href="https://www.instagram.com/isa.lockhart/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                     </ul>
                 </header>
+
                 <!-- Banner -->
                 <section id="banner">
                     <div class="content">
@@ -43,7 +44,7 @@
                         </ul>
                     </div>
                     <span class="image object">
-                        <img src="/images/birthday.png" alt="img" />
+                        <img src="images/isa.png" alt="img" />
                     </span>
                 </section>
 
